Add initial jest testing
Also patches some bugs:

* Stricter type checking on window and
child objects in isSupported
* Fix boolean check in checkVoices

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,12 @@ install:
 jobs:
   include:
     - stage: test
+      name: "Unit"
+      script: npm test
+    - name: "Lint"
       script: npm run lint
     - stage: check
+      name: "Audit"
       script: npm audit
-    - script: npm outdated
+    - name: "Outdated"
+      script: npm outdated
