--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "descripton": "Basic wrapper around browser TTS functionality",
   "main": "basic-tts.js",
   "scripts": {
-    "test": "jest tests",
+    "test": "jest tests --coverage",
     "lint": "./node_modules/eslint/bin/eslint.js ."
   },
   "author": "G. Young",
