Add tests for checkVoices function
Adds fix to ensure the when attempts=0,
we don't override to the default of 10.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "test": "jest --coverage",
     "lint": "./node_modules/eslint/bin/eslint.js ."
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "basic-tts.js"
+    ]
+  },
   "author": "G. Young",
   "keywords": [
     "brower speech synthesis",
