--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
       "basic-tts.js"
     ]
   },
+  "homepage": "https://github.com/gfyoung/basic-tts",
   "author": "G. Young",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gfyoung/basic-tts"
+  },
+  "bugs": {
+    "url": "https://github.com/gfyoung/basic-tts/issues"
+  },
   "keywords": [
     "brower speech synthesis",
     "browser text to speech",
