Fix package.json typo

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "basic-tts",
-  "version": "1.0.2",
-  "descripton": "Basic wrapper around browser TTS functionality",
+  "version": "1.0.3",
+  "description": "Basic wrapper around browser TTS functionality",
   "main": "basic-tts.js",
   "scripts": {
     "test": "jest --coverage",
