Manually configure publish on Actions
xref: https://github.com/actions/setup-node/issues/230

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,14 +15,16 @@ jobs:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
       - run: npm install -g npm@next-7 && npm install
+        name: Install Dependencies
+      - run: echo -e 'registry=https://${REGISTRY_URL}\n//${REGISTRY_URL}:_authToken=${NODE_AUTH_TOKEN}' > .npmrc
+        name: Configure Regisry
       - run: npm publish
         name: NPM Publish
         env:
+          REGISTRY_URL: 'registry.npmjs.org/'
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - uses: actions/setup-node@v2
-        with:
-          registry-url: 'https://npm.pkg.github.com'
-      - run: npm publish
+      - run: echo $(jq '.name = "@gfyoung/basic-tts"' package.json) > package.json && npm publish
         name: GitHub Publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REGISTRY_URL: 'npm.pkg.github.com/'
+          NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
