--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,9 +12,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: npm install -g npm@next-7 && npm install
+      - run: npm install
         name: Install Dependencies
       - run: echo -e 'registry=https://${REGISTRY_URL}\n//${REGISTRY_URL}:_authToken=${NODE_AUTH_TOKEN}' > .npmrc
         name: Configure Regisry
